--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>339</width>
-    <height>248</height>
+    <width>346</width>
+    <height>274</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -142,14 +142,14 @@
              </property>
             </widget>
            </item>
-           <item row="1" column="0">
+           <item row="2" column="0">
             <widget class="QLabel" name="label_2">
              <property name="text">
               <string>Author:</string>
              </property>
             </widget>
            </item>
-           <item row="1" column="1">
+           <item row="2" column="1">
             <widget class="QLineEdit" name="lEditAuthor">
              <property name="statusTip">
               <string>The author's name</string>
@@ -159,21 +159,31 @@
            <item row="0" column="0">
             <widget class="QLabel" name="label">
              <property name="text">
-              <string>Language Name:</string>
+              <string>Language name:</string>
              </property>
             </widget>
            </item>
-           <item row="2" column="1">
+           <item row="3" column="1">
             <widget class="QLineEdit" name="lEditContact">
              <property name="statusTip">
               <string>Contact to author (eg, website or e-mail)</string>
              </property>
             </widget>
            </item>
-           <item row="2" column="0">
+           <item row="3" column="0">
             <widget class="QLabel" name="label_3">
              <property name="text">
               <string>Contact:</string>
+             </property>
+            </widget>
+           </item>
+           <item row="1" column="1">
+            <widget class="QLineEdit" name="lEditShortNameLanguage"/>
+           </item>
+           <item row="1" column="0">
+            <widget class="QLabel" name="label_5">
+             <property name="text">
+              <string>Short language name:</string>
              </property>
             </widget>
            </item>
@@ -353,7 +363,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>339</width>
+     <width>346</width>
      <height>20</height>
     </rect>
    </property>
